--- a/package.json
+++ b/package.json
@@ -1,21 +1,43 @@
 {
-    "name": "react-project",
+    "name": "Shadowing-Project",
     "version": "1.0.0",
     "description": "A simple React project",
     "main": "index.js",
+    "homepage": "https://GiulianaSilva.github.io/Shadowing-Project/",
     "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
     },
-    "keywords": [],
-    "author": "",
-    "license": "MIT",
+   
     "dependencies": {
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-scripts": "5.0.1"
     },
-    "devDependencies": {}
-  }
-  
+    "devDependencies": {
+        "gh-pages": "^5.0.0"
+    },
+
+    "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+},
+    "eslintConfig": {
+        "extends": [
+        "react-app",
+        "react-app/jest"
+        ]
+    }   
+}
