--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-   
     "dependencies": {
+        "@craco/craco": "^7.1.0",
+        "@shadcn/ui": "^0.0.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1"
@@ -21,23 +22,22 @@
     "devDependencies": {
         "gh-pages": "^5.0.0"
     },
-
     "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-},
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
     "eslintConfig": {
         "extends": [
-        "react-app",
-        "react-app/jest"
+            "react-app",
+            "react-app/jest"
         ]
-    }   
+    }
 }
