--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
         "eject": "react-scripts eject"
     },
     "dependencies": {
-        "@craco/craco": "^7.1.0",
+        "@craco/craco": "^5.9.0",
         "@shadcn/ui": "^0.0.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1"
+        "react-scripts": "^5.0.1"
     },
     "devDependencies": {
         "gh-pages": "^5.0.0"
