--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@shadcn/ui": "^0.0.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^7.9.3",
         "react-scripts": "^5.0.1"
     },
     "devDependencies": {
